# timi

./: CMakeLists.txt  LICENSE  README.md  timi_interpolator_prompt.md
examples/: basic_2d.cpp  custom_class.cpp
include/timi/: timi.hpp
test/: test.cpp
